--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -2,15 +2,15 @@
   #widgetIcon {
     position: absolute;
     z-index: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
   }
 
   #x-delete {
     position: absolute;
     z-index: 1;
-    height: 100%;
     width: 100%;
+    height: 100%;
   }
 
   .modal-header {
@@ -33,6 +33,25 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+
+  .selected-icon-container {
+    text-align: center;
+  }
+
+  .selected-icon {
+    width: 60%;
+    height: 60%;
+  }
+
+  .gridster-modal {
+    max-height: 50vh;
+    overflow: scroll;
+  }
+
+  .gridster-modal {
+    max-height: 50vh;
+    overflow: scroll;
   }
 </style>
 
@@ -64,24 +83,24 @@
           Sign Out
         </div>
       </div>
-      <div class="modal-body" style="background-color: #231f20">
+      <div class="modal-body">
       <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
         <div class="row" style="padding-bottom:10px;">
-        <div class="col-xs-6 modal-body-form" style="display:flex;flex-direction:column;justify-content:space-between;">
+        <div class="col-xs-6 modal-body-form">
           <input type="text" ng-model="widgetUrl" name="widgetUrl" placeholder="URL" /><br />
           <input type="number" ng-model="widgetRow" name="widgetRow" placeholder="Row" /><br />
           <input type="number" ng-model="widgetCol" name="widgetCol" placeholder="Column" /><br />
           <input type="submit" class="btn btn-info" value="Add Widget" />
         </div>
-        <div class="col-xs-6" style="text-align:center;">
-            <img src={{selectedIcon}} alt="widget" style="width:60%;height:60%;">
+        <div class="col-xs-6 selected-icon-container">
+            <img src={{selectedIcon}} class="selected-icon">
         </div>
         </div>
-        <div gridster="gridsterModalOptions" style="max-height:50vh;overflow:scroll;">
+        <div class="gridster-modal" gridster="gridsterModalOptions">
           <ul>
             <li gridster-item="item" ng-repeat="icon in allIcons">
               <ng-click ng-click="selectIcon(icon.icon);"> 
-                <img src={{icon.icon}} alt="widget" style="width:100%;height:100%">
+                <img src={{icon.icon}} class="gridster-modal-icon" alt="widget" style="width:100%;height:100%">
                 </ng-click>
             </li>
           </ul>
