--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -17,43 +17,39 @@
 </div>
 
 <script type="text/ng-template" id="mainModal.html">
-<div ng-hide="hideMainModal">
-  <div class="modal-header">
-        <div class="modal-header-div">
-          Rearrange 
-        </div>
-        <div class="modal-header-div">
-          Export 
-        </div>
-        <button type="button" class="btn btn-info" ng-click="openLoginModal()">Import</button>
-        <button type="button" class="btn btn-info" ng-click="deleteEnabled=true;">delete</button>
-        <div class="modal-header-div">
-          Sign Out
-        </div>
-      </div>
-      <div class="modal-body">
-      <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
-        <div class="row modal-form-icon-container" style="padding-bottom:10px;">
+<uib-tabset active="active">
+  <uib-tab heading="Add Widget">
+    <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
+      <div class="row modal-form-icon-container" style="padding-bottom:10px;">
         <div class="col-xs-6 modal-body-form">
           <input type="text" ng-model="widgetUrl" name="widgetUrl" placeholder="URL" /><br />
           <input type="submit" class="btn btn-info" value="Add Widget" />
         </div>
         <div class="col-xs-6 selected-icon-container">
-            <img src={{selectedIcon}} class="selected-icon">
+          <img src={{selectedIcon}} class="selected-icon">
         </div>
-        </div>
-        <div class="gridster-modal" gridster="gridsterModalOptions">
-          <ul>
-            <li gridster-item="item" ng-repeat="icon in allIcons">
-              <ng-click ng-click="selectIcon(icon.icon);"> 
-                <img src={{icon.icon}} class="gridster-modal-icon" alt="widget"
-                </ng-click>
-            </li>
-          </ul>
-        </div>
-      </form>
-    </div>
-</div>
+      </div>
+      <div class="gridster-modal" gridster="gridsterModalOptions">
+        <ul>
+          <li gridster-item="item" ng-repeat="icon in allIcons">
+            <ng-click ng-click="selectIcon(icon.icon);"> 
+              <img src={{icon.icon}} class="gridster-modal-icon" alt="widget"</ng-click>
+          </li>
+        </ul>
+      </div>
+    </form>
+  </uib-tab>
+  <uib-tab heading="Export">
+    Export Content
+  </uib-tab>
+  <uib-tab heading="Import">
+    Import Content
+  </uib-tab>
+  <uib-tab heading="Log Out">
+    Really log out?
+  </uib-tab>
+</uib-tabset>
+
 </script>
 
 <script type="text/ng-template" id="loginModal.html">
