--- a/app_client/index.html
+++ b/app_client/index.html
@@ -24,6 +24,7 @@
   <script src="lib/angular-long-press/dist/angular-long-press.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
   <script src="app.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 </body>
 
 </html>
