--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -17,52 +17,62 @@
 </div>
 
 <script type="text/ng-template" id="mainModal.html">
-<uib-tabset active="active">
-  <uib-tab heading="Add Widget">
-    <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
-      <div class="row modal-form-icon-container" style="padding-bottom:10px;">
-        <div class="col-xs-6 modal-body-form">
-          <input type="text" ng-model="widgetUrl" name="widgetUrl" placeholder="URL" /><br />
-          <input type="submit" class="btn btn-info" value="Add Widget" />
+  <uib-tabset active="active">
+    <uib-tab heading="Add Widget">
+      <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
+        <div class="row modal-form-icon-container" style="padding-bottom:10px;">
+          <div class="col-xs-6 modal-body-form">
+            <input type="text" ng-model="widgetUrl" name="widgetUrl" placeholder="URL" /><br />
+            <input type="submit" class="btn btn-info" value="Add Widget" />
+          </div>
+          <div class="col-xs-6 selected-icon-container">
+            <img src={{selectedIcon}} class="selected-icon">
+          </div>
         </div>
-        <div class="col-xs-6 selected-icon-container">
-          <img src={{selectedIcon}} class="selected-icon">
+        <div class="gridster-modal" gridster="gridsterModalOptions">
+          <ul>
+            <li gridster-item="item" ng-repeat="icon in allIcons">
+              <ng-click ng-click="selectIcon(icon.icon);"> 
+                <img src={{icon.icon}} class="gridster-modal-icon" alt="widget"</ng-click>
+            </li>
+          </ul>
         </div>
-      </div>
-      <div class="gridster-modal" gridster="gridsterModalOptions">
-        <ul>
-          <li gridster-item="item" ng-repeat="icon in allIcons">
-            <ng-click ng-click="selectIcon(icon.icon);"> 
-              <img src={{icon.icon}} class="gridster-modal-icon" alt="widget"</ng-click>
-          </li>
-        </ul>
-      </div>
-    </form>
-  </uib-tab>
-  <uib-tab heading="Export">
-    Export Content
-  </uib-tab>
-  <uib-tab heading="Import">
-    Import Content
-  </uib-tab>
-  <uib-tab heading="Register">
+      </form>
+    </uib-tab>
 
-    <form ng-submit="$reg.onSubmit()">
-      <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="$reg.credentials.email">
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" placeholder="Password" ng-model="$reg.credentials.password">
-      </div>
-      <button type="submit" class="btn btn-default">Sign in!</button>
-    </form>
-  </uib-tab>
-  <uib-tab heading="Log Out">
-    Really log out?
-  </uib-tab>
-</uib-tabset>
+    <uib-tab heading="Export">
+    <div ng-controller="dashboardCtrl">
+      {{widgets}}  
+    </div>
+    </uib-tab>
+
+    <uib-tab heading="Import">
+      <form ng-submit="importWidgets()" ng-controller="dashboardCtrl">
+        <div class="form-group">
+          <label for="widgetString">Email address</label>
+          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="$reg.credentials.email">
+        </div>
+      </form>
+    </uib-tab>
+
+    <uib-tab heading="Register">
+      <form ng-submit="$reg.onSubmit()">
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="$reg.credentials.email">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="$reg.credentials.password">
+        </div>
+        <button type="submit" class="btn btn-default">Sign in!</button>
+      </form>
+    </uib-tab>
+
+    <uib-tab heading="Log Out">
+      Really log out?
+    </uib-tab>
+  </uib-tabset>
 
 </script>
 
