--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,9 +1,3 @@
-<div style="style=width:200px;margin:0 auto;">
-  <!-- <ds-widget-clock theme="dark" show-digital="false" show-analog="false"></ds-widget-clock> -->
-  <ds-widget-clock theme='dark' show-analog digital-format="'ss:hh:mm a'"></ds-widget-clock>
-
-</div>
-
 <div id="tool-icon-container" >
     <ng-click ng-click="toggleDelete()"> 
       <img id="delete-button" class="tool-icon"
@@ -27,7 +21,6 @@
     </ng-click>
 </div>
 
-
 <div id="grid-container" gridster="gridOptions">
   <ul>
     <li gridster-item ng-repeat="widget in widgets track by $index"
@@ -42,11 +35,19 @@
                            height="30px" width="30px">
       </a>
     </li>
+    <li gridster-item sizeX="1" row="3" col="0">
+    <!-- <div style="style=width:50%;"> -->
+    <!--   <div style="style=width:2px;margin:0 auto;"> -->
+    <!--     <ds-widget-clock show-analog theme='dark'></ds-widget-clock> -->
+    <!--   </div> -->
+    <!-- </div> -->
+    <div ng-bind-html="clockWidget"></div>
+    </li>
   </ul>
 </div>
 
 <script type="text/ng-template" id="mainModal.html">
-  <uib-tabset id="main-modal" active="active">
+<uib-tabset id="main-modal" active="active">
     <uib-tab class="modal-tab" heading="Add Widget">
       <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
         <div class="row">
@@ -135,7 +136,7 @@
 </script>
 
 <script type="text/ng-template" id="authModal.html">
-  <uib-tabset id="auth-modal" active="active">
+<uib-tabset id="auth-modal" active="active">
     <uib-tab heading="Login">
       <form ng-submit="$auth.onLogin()" class="modal-tab">
         <div class="form-group">
